# malanghub

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  stdout.txt  turbo.json
.claude/: settings.json
.github/: copilot-instructions.md
apps/native/src-tauri/: Cargo.toml  Entitlements.appstore.plist  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.local.conf.json.example  tauri.mobile-ci.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/plugins/: Cargo.toml  README.md  build.rs
apps/native/src-tauri/plugins/android/: build.gradle.kts
apps/native/src-tauri/plugins/android/src/main/java/: ExamplePlugin.kt
apps/native/src-tauri/plugins/ios/: Package.swift  README.md
apps/native/src-tauri/plugins/ios/Sources/: ExamplePlugin.swift
apps/native/src-tauri/plugins/macos/: MacAppleSignIn.swift
apps/native/src-tauri/plugins/permissions/: default.toml
apps/native/src-tauri/plugins/permissions/autogenerated/: reference.md
apps/native/src-tauri/plugins/permissions/schemas/: schema.json
apps/native/src-tauri/plugins/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
apps/native/src-tauri/src/: lib.rs  main.rs
docs/: mongodb-backup.md
frontend/: .env.example  .gitignore  .yarnrc.yml  Dockerfile  docker-compose.yml  package.json  (+4 more)
(+467 files in other folders)
