[package]
name = "malanghub-native"
version = "0.1.0"
description = "Malanghub desktop and mobile app"
authors = ["Malanghub"]
edition = "2021"

[lib]
name = "malanghub_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-oauth = "2"
tauri-plugin-google-auth = { path = "plugins" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
